fix for scrollbars

--- a/themes/grav/scss/template/_editor.scss
+++ b/themes/grav/scss/template/_editor.scss
@@ -4,8 +4,14 @@
         height: 300px;
     }
 
+    .CodeMirror {
+        .CodeMirror-vscrollbar, .CodeMirror-hscrollbar {
+            z-index: 1;
+        }
+    }
+
     .CodeMirror-scroll {
-        margin-right: -36px;
+        //margin-right: -36px;
         position: static;
 
         // hide native scrollbar at the bottom
